--- a/target-api/requirements.txt
+++ b/target-api/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-redis==5.0.1
-pydantic==2.5.3
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+redis>=5.0.1
+pydantic>=2.5.0
